# gmx_clusterByFeatures

./: .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  Dockerfile  MANIFEST.in  README.md  README.rst  build_in_docker.sh  build_in_travis.sh  dev-requirements.txt  environment.yaml  gmx_clusterByFeatures.py.in  pyCode2Hex.py  pyproject.toml  setup.py
.devcontainer/: devcontainer.json
.github/workflows/: linux-wheels.yml  macos-wheels.yml  wheels.yml
docs/: Makefile  cmdline.rst  conf.py  examples.rst  index.rst  install.rst  intro.rst  make.bat  requirements.txt  tutorials.rst  usage.rst
docs/_templates/: layout.html
docs/commands/: cluster.rst  distmat.rst  featuresplot.rst  hole.rst  holeclustersplot.rst  holefeatures.rst  holeplot.rst  matplot.rst
docs/examples/: distance_based.rst  distmat_pca.rst  ligand_cluster.rst
docs/tutorials/: distances-hbonds.ipynb  distmat-pca-TFAM.ipynb  ligand-cavity-clustering.ipynb  ligand-pca.ipynb  protein-ligand-interaction.ipynb  protein-pca.ipynb
gmx_clusterByFeatures/: __init__.py  _version.py  featuresplotcmd.py  featuresplotter.py  holeOutputProcessor.py  holeclustersplot.py  holefeatures.py  holeplot.py  main.py  matplot.py
scripts/: build_dev_setup_conda.sh  build_macos.sh  build_macos_wheels.sh  build_wheels.sh  pre_cibuildwheel.sh  pre_cibuildwheel_mac.sh
src/: .cproject  .project  CMakeLists.txt  cluster.py  clusterbyfeatures.cpp  clusterbyfeatures.h  clustering.h  distMat.cpp  do_cluster.cpp  do_cluster.h  gmx_clusterbyfeatures.cpp  gmx_clusterbyfeatures.h  hole.cpp  hole_radius.h  logstream.cpp  logstream.h  main.cpp  parseData.cpp  parseData.h  python_helper.cpp  python_helper.h  pywrapper.cpp
